src/main/default/objects/Service_History__c/Service_History__c.object-meta.xml
<CustomObject>
    <label>Service History</label>
    <nameField>
        <displayFormat>ESH-{0000}</displayFormat>
        <label>Service History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>