src/main/default/objects/Service_History__c/fields/Out_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Service__c</fullName>
    <label>Out of Service</label>
    <type>DateTime</type>
</CustomField>