src/main/default/objects/Service_History__c/fields/Previous_Meter_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Meter_Value__c</fullName>
    <label>Previous Meter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>