src/main/default/objects/Service_History__c/fields/Returned_to_Service__c.field-meta.xml
<CustomField>
    <fullName>Returned_to_Service__c</fullName>
    <label>Returned to Service</label>
    <type>DateTime</type>
</CustomField>